--- a/Pandas/08. 데이터 선택 (iloc).ipynb
+++ b/Pandas/08. 데이터 선택 (iloc).ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 8. 데이터 선택 (iloc)\n",
     "\n",
-    "워치를 이용하여 원하는 row 에서 원하는 col 선택"
+    "위치를 이용하여 원하는 row 에서 원하는 col 선택"
    ]
   },
   {
