데이터 분석 및 시각화_파이썬 완강

--- a/Matplotlib/05. 파일 저장.ipynb
+++ b/Matplotlib/05. 파일 저장.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6614db7c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "04528cd9",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "51db70e6",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "54cfdca5",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
    "source": [
     "plt.figure(dpi=200)\n",
     "plt.plot(x, y)\n",
-    "plt.savefig('graph_200.png')"
+    "plt.savefig('graph_200.png', dpi=100)"
    ]
   },
   {
@@ -85,9 +85,7 @@
    "id": "5567ed08",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 더 남음"
-   ]
+   "source": []
   }
  ],
  "metadata": {
